--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wdth,wght@75..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Туры на воздушном шаре</title>
   </head>
   <body>
@@ -16,7 +16,7 @@
         <img
           class="header__logo"
           alt="Логотип сайта в виде воздушного шара"
-          src="/icons/Icon-logo.svg"
+          src="icons/Icon-logo.svg"
         />
         <div class="header__box">
           <h1 class="title-first">
