--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
           <a href="#" class="btn btn_animated">Наш каталог</a>
         </div>
       </header>
+      <main>
+        <section class="section-about">
+          <h2 class="title-secondary margin-bottom-80px">Невероятное ощущение свободы</h2>
+        </section>
+      </main>
     </div>
   </body>
 </html>
