--- a/index.html
+++ b/index.html
@@ -30,7 +30,47 @@
       </header>
       <main>
         <section class="section-about">
-          <h2 class="title-secondary margin-bottom-80px">Невероятное ощущение свободы</h2>
+          <h2 class="title-secondary margin-bottom-80px">
+            Невероятное ощущение свободы
+          </h2>
+          <div class="section-container flex-rows">
+            <div class="section-about__text-part">
+              <h3 class="title-third margin-bottom-10px">
+                Позвольте себе приключение
+              </h3>
+              <p class="text margin-bottom-30px">
+                Задача организации, в особенности же дальнейшее развитие
+                различных форм деятельности влечет за собой процесс внедрениям и
+                модернизации соответствующий условий активизации. Таким образом
+                начало повседневной работы по формированию позиции влечет.
+              </p>
+              <h3 class="title-third margin-bottom-10px">
+                Вверх на 6000 метров над уровнем моря
+              </h3>
+              <p class="text margin-bottom-50px">
+                Задача организации, в особенности же дальнейшее развитие
+                различных форм деятельности влечет за собой процесс внедрения и
+                модернизации соответствующий условий активизации. Таким образом
+                начало повседневной работы по формированию позиции влечет.
+              </p>
+              <a href="#" class="btn-text">Узнать больше &rarr;</a>
+            </div>
+            <div class="composition">
+              <img
+                class="composition__photo composition__photo_n1"
+                src="/img/picture_1.png"
+                alt="воздушные шары в горах"
+              /><img
+                class="composition__photo composition__photo_n2"
+                src="/img/picture_2.png"
+                alt="воздушные шары"
+              /><img
+                class="composition__photo composition__photo_n3"
+                src="/img/picture_3.png"
+                alt="воздушный шар"
+              />
+            </div>
+          </div>
         </section>
       </main>
     </div>
