--- a/index.html
+++ b/index.html
@@ -72,6 +72,28 @@
             </div>
           </div>
         </section>
+        <section class="section-cards">
+          <div class="section-cards__item">
+            <img src="/icons/globe.svg" alt="иконка-глобус" />
+            <h3 class="title-third">Приключение</h3>
+            <p class="text">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+          </div>
+          <div class="section-cards__item">
+            <img src="/icons/point.svg" alt="иконка-координата" />
+            <h3 class="title-third">Приключение</h3>
+            <p class="text">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+          </div>
+          <div class="section-cards__item">
+            <img src="/icons/compas.svg" alt="иконка-компас" />
+            <h3 class="title-third">Приключение</h3>
+            <p class="text">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+          </div>
+          <div class="section-cards__item">
+            <img src="/icons/table.svg" alt="иконка-указатель" />
+            <h3 class="title-third">Приключение</h3>
+            <p class="text">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+          </div>
+        </section>
       </main>
     </div>
   </body>
