--- a/index.html
+++ b/index.html
@@ -74,25 +74,97 @@
         </section>
         <section class="section-adventure">
           <div class="adventure-card">
-            <img class="adventure-card__icon" src="/icons/globe.svg" alt="иконка-глобус" />
+            <img
+              class="adventure-card__icon"
+              src="/icons/globe.svg"
+              alt="иконка-глобус"
+            />
             <h3 class="title-third margin-bottom-10px">Приключение</h3>
-            <p class="adventure-card__text text">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+            <p class="adventure-card__text text">
+              Задача организации, в особенности же дальнейшее развитие различных
+              в особенности же развитие различных
+            </p>
           </div>
           <div class="adventure-card">
-            <img class="adventure-card__icon" src="/icons/point.svg" alt="иконка-координата" />
+            <img
+              class="adventure-card__icon"
+              src="/icons/point.svg"
+              alt="иконка-координата"
+            />
             <h3 class="title-third margin-bottom-10px">Приключение</h3>
-            <p class="adventure-card__text text">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+            <p class="adventure-card__text text">
+              Задача организации, в особенности же дальнейшее развитие различных
+              в особенности же развитие различных
+            </p>
           </div>
           <div class="adventure-card">
-            <img class="adventure-card__icon" src="/icons/compas.svg" alt="иконка-компас" />
+            <img
+              class="adventure-card__icon"
+              src="/icons/compas.svg"
+              alt="иконка-компас"
+            />
             <h3 class="title-third margin-bottom-10px">Приключение</h3>
-            <p class="adventure-card__text text">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+            <p class="adventure-card__text text">
+              Задача организации, в особенности же дальнейшее развитие различных
+              в особенности же развитие различных
+            </p>
           </div>
           <div class="adventure-card">
-            <img class="adventure-card__icon" src="/icons/table.svg" alt="иконка-указатель" />
+            <img
+              class="adventure-card__icon"
+              src="/icons/table.svg"
+              alt="иконка-указатель"
+            />
             <h3 class="title-third margin-bottom-10px">Приключение</h3>
-            <p class="adventure-card__text text">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+            <p class="adventure-card__text text">
+              Задача организации, в особенности же дальнейшее развитие различных
+              в особенности же развитие различных
+            </p>
           </div>
+        </section>
+        <section class="section-tours">
+          <h2 class="title-secondary margin-bottom-80px">
+            Наиболее популярные туры
+          </h2>
+          <div class="tour-container flex-rows">
+            <div class="tour-card">
+              <img
+                class="tour-card__image"
+                src="/img/picture_4.png"
+                alt="корзина воздушного шара"
+              />
+              <h3 class="title-third margin-bottom-10px">Групповые туры</h3>
+              <p class="text">
+                Группы от 6 человек<br />Продолжительность 2 час<br />В группе 1
+                гид <br />Дальность полета 6км<br>Бесплатные сувениры
+              </p>
+            </div>
+            <div class="tour-card">
+              <img
+                class="tour-card__image"
+                src="/img/picture_5.png"
+                alt="воздушные шары"
+              />
+              <h3 class="title-third margin-bottom-10px">Частные туры</h3>
+              <p class="text">
+                Группы от 6 человек<br />Продолжительность 2 час<br />В группе 1
+                гид <br />Дальность полета 6км<br>Бесплатные сувениры
+              </p>
+            </div>
+            <div class="tour-card">
+              <img
+                class="tour-card__image"
+                src="/img/picture_6.png"
+                alt="человек на смотровой площадке"
+              />
+              <h3 class="title-third margin-bottom-10px">Смотровые площадки</h3>
+              <p class="text">
+                Группы от 6 человек<br />Продолжительность 2 час<br />В группе 1
+                гид <br />Дальность полета 6км<br>Бесплатные сувениры
+              </p>
+            </div>
+          </div>
+          <a href="#" class="btn btn_animated margin-bottom-80px">Забронировать</a>
         </section>
       </main>
     </div>
