--- a/index.html
+++ b/index.html
@@ -128,43 +128,75 @@
           </h2>
           <div class="tour-container flex-rows">
             <div class="tour-card">
-              <img
-                class="tour-card__image"
-                src="/img/picture_4.png"
-                alt="корзина воздушного шара"
-              />
-              <h3 class="title-third margin-bottom-10px">Групповые туры</h3>
-              <p class="text">
-                Группы от 6 человек<br />Продолжительность 2 час<br />В группе 1
-                гид <br />Дальность полета 6км<br>Бесплатные сувениры
-              </p>
+              <div class="tour-card__side tour-card__side_front">
+                <img
+                  class="tour-card__image"
+                  src="/img/picture_4.png"
+                  alt="корзина воздушного шара"
+                />
+                <h4 class="tour-card__title">Групповые туры</h4>
+                <ul class="tour-card__list">
+                  <li>Группы от 6 человек</li>
+                  <li>Продолжительность 2 час</li>
+                  <li>В группе 1 гид</li>
+                  <li>Дальность полета 6км</li>
+                  <li>Бесплатные сувениры</li>
+                </ul>
+              </div>
+              <div class="tour-card__side tour-card__side_back">
+                <p class="full-price">Полная стоимость:</p>
+                <p class="price">5990P</p>
+                <a href="#" class="btn btn-mini">Забронировать</a>
+              </div>
             </div>
             <div class="tour-card">
-              <img
-                class="tour-card__image"
-                src="/img/picture_5.png"
-                alt="воздушные шары"
-              />
-              <h3 class="title-third margin-bottom-10px">Частные туры</h3>
-              <p class="text">
-                Группы от 6 человек<br />Продолжительность 2 час<br />В группе 1
-                гид <br />Дальность полета 6км<br>Бесплатные сувениры
-              </p>
+              <div class="tour-card__side tour-card__side_front">
+                <img
+                  class="tour-card__image"
+                  src="/img/picture_5.png"
+                  alt="воздушные шары"
+                />
+                <h4 class="tour-card__title">Частные туры</h4>
+                <ul class="tour-card__list">
+                  <li>Группы от 6 человек</li>
+                  <li>Продолжительность 2 час</li>
+                  <li>В группе 1 гид</li>
+                  <li>Дальность полета 6км</li>
+                  <li>Бесплатные сувениры</li>
+                </ul>
+              </div>
+              <div class="tour-card__side tour-card__side_back">
+                <p class="full-price">Полная стоимость:</p>
+                <p class="price">5990P</p>
+                <a href="#" class="btn btn-mini">Забронировать</a>
+              </div>
             </div>
             <div class="tour-card">
-              <img
-                class="tour-card__image"
-                src="/img/picture_6.png"
-                alt="человек на смотровой площадке"
-              />
-              <h3 class="title-third margin-bottom-10px">Смотровые площадки</h3>
-              <p class="text">
-                Группы от 6 человек<br />Продолжительность 2 час<br />В группе 1
-                гид <br />Дальность полета 6км<br>Бесплатные сувениры
-              </p>
+              <div class="tour-card__side tour-card__side_front">
+                <img
+                  class="tour-card__image"
+                  src="/img/picture_6.png"
+                  alt="человек на смотровой площадке"
+                />
+                <h4 class="tour-card__title">Смотровые площадки</h4>
+                <ul class="tour-card__list">
+                  <li>Группы от 6 человек</li>
+                  <li>Продолжительность 2 час</li>
+                  <li>В группе 1 гид</li>
+                  <li>Дальность полета 6км</li>
+                  <li>Бесплатные сувениры</li>
+                </ul>
+              </div>
+              <div class="tour-card__side tour-card__side_back">
+                <p class="full-price">Полная стоимость:</p>
+                <p class="price">5990P</p>
+                <a href="#" class="btn btn-mini">Забронировать</a>
+              </div>
             </div>
           </div>
-          <a href="#" class="btn btn_animated margin-bottom-80px">Забронировать</a>
+          <a href="#" class="btn btn_animated margin-bottom-80px"
+            >Забронировать</a
+          >
         </section>
       </main>
     </div>
