--- a/index.html
+++ b/index.html
@@ -134,7 +134,12 @@
                   src="/img/picture_4.png"
                   alt="корзина воздушного шара"
                 />
-                <h4 class="tour-card__title">Групповые туры</h4>
+                <h4 class="tour-card__title">
+                  <span class="tour-card__span tour-card__span_1"
+                    >Групповые</span
+                  ><br />
+                  <span class="tour-card__span tour-card__span_2">туры</span>
+                </h4>
                 <ul class="tour-card__list">
                   <li>Группы от 6 человек</li>
                   <li>Продолжительность 2 час</li>
@@ -145,7 +150,7 @@
               </div>
               <div class="tour-card__side tour-card__side_back">
                 <p class="full-price">Полная стоимость:</p>
-                <p class="price">5990P</p>
+                <p class="price">5990₽</p>
                 <a href="#" class="btn btn-mini">Забронировать</a>
               </div>
             </div>
@@ -156,7 +161,11 @@
                   src="/img/picture_5.png"
                   alt="воздушные шары"
                 />
-                <h4 class="tour-card__title">Частные туры</h4>
+                <h4 class="tour-card__title">
+                  <span class="tour-card__span tour-card__span_1">Частные</span
+                  ><br />
+                  <span class="tour-card__span tour-card__span_2">туры</span>
+                </h4>
                 <ul class="tour-card__list">
                   <li>Группы от 6 человек</li>
                   <li>Продолжительность 2 час</li>
@@ -167,7 +176,7 @@
               </div>
               <div class="tour-card__side tour-card__side_back">
                 <p class="full-price">Полная стоимость:</p>
-                <p class="price">5990P</p>
+                <p class="price">5990₽</p>
                 <a href="#" class="btn btn-mini">Забронировать</a>
               </div>
             </div>
@@ -178,7 +187,14 @@
                   src="/img/picture_6.png"
                   alt="человек на смотровой площадке"
                 />
-                <h4 class="tour-card__title">Смотровые площадки</h4>
+                <h4 class="tour-card__title">
+                  <span class="tour-card__span tour-card__span_1"
+                    >Смотровые</span
+                  ><br />
+                  <span class="tour-card__span tour-card__span_2"
+                    >площадки</span
+                  >
+                </h4>
                 <ul class="tour-card__list">
                   <li>Группы от 6 человек</li>
                   <li>Продолжительность 2 час</li>
@@ -189,7 +205,7 @@
               </div>
               <div class="tour-card__side tour-card__side_back">
                 <p class="full-price">Полная стоимость:</p>
-                <p class="price">5990P</p>
+                <p class="price">5990₽</p>
                 <a href="#" class="btn btn-mini">Забронировать</a>
               </div>
             </div>
