--- a/index.html
+++ b/index.html
@@ -214,6 +214,46 @@
             >Забронировать</a
           >
         </section>
+        <section class="section-feedback">
+          <h2 class="title-secondary margin-bottom-80px title-secondary_white">
+            Отзывы наших клиентов
+          </h2>
+          <div class="feedback-card">
+            <img
+              class="feedback-card__photo"
+              src="/img/person1.jpg"
+              alt="фотография человека, оставившего отзыв"
+            />
+            <h3 class="title-third margin-bottom-10px">
+              Я получил массу впечатлений
+            </h3>
+            <p class="text">
+              Задача организации, в особенности же дальнейшее развитие различных
+              в особенности же развитие различных. Задача организации, в
+              особенности же дальнейшее развитие различных в особенности же
+              развитие различных
+            </p>
+          </div>
+          <div class="feedback-card">
+            <img
+              class="feedback-card__photo"
+              src="/img/person2.jpg"
+              alt="фотография человека, оставившего отзыв"
+            />
+            <h3 class="title-third margin-bottom-10px">
+              Это было великолепно и незабываемо
+            </h3>
+            <p class="text">
+              Задача организации, в особенности же дальнейшее развитие различных
+              в особенности же развитие различных. Задача организации, в
+              особенности же дальнейшее развитие различных в особенности же
+              развитие различных
+            </p>
+          </div>
+          <a href="#" class="btn btn_animated margin-bottom-80px"
+            >Забронировать</a
+          >
+        </section>
       </main>
     </div>
   </body>
