--- a/index.html
+++ b/index.html
@@ -219,11 +219,14 @@
             Отзывы наших клиентов
           </h2>
           <div class="feedback-card">
-            <img
-              class="feedback-card__photo"
-              src="/img/person1.jpg"
-              alt="фотография человека, оставившего отзыв"
-            />
+            <figure class="feedback-card__person">
+              <img
+                src="/img/person1.jpg"
+                alt="фотография человека, оставившего отзыв"
+              />
+              <figcaption class="feedback-card__name">Антон Рябин</figcaption>
+            </figure>
+
             <h3 class="title-third margin-bottom-10px">
               Я получил массу впечатлений
             </h3>
@@ -235,11 +238,13 @@
             </p>
           </div>
           <div class="feedback-card">
-            <img
-              class="feedback-card__photo"
-              src="/img/person2.jpg"
-              alt="фотография человека, оставившего отзыв"
-            />
+            <figure class="feedback-card__person">
+              <img
+                src="/img/person2.jpg"
+                alt="фотография человека, оставившего отзыв"
+              />
+              <figcaption class="feedback-card__name">Лиза Орлова</figcaption>
+            </figure>
             <h3 class="title-third margin-bottom-10px">
               Это было великолепно и незабываемо
             </h3>
@@ -247,7 +252,7 @@
               Задача организации, в особенности же дальнейшее развитие различных
               в особенности же развитие различных. Задача организации, в
               особенности же дальнейшее развитие различных в особенности же
-              развитие различных
+              развитие
             </p>
           </div>
           <a href="#" class="btn btn_animated margin-bottom-80px"
