--- a/index.html
+++ b/index.html
@@ -306,14 +306,40 @@
                 </div>
               </div>
               <div class="form-booking__button">
-                <button class="btn btn-brown">
-                  Забронировать
-                </button>
+                <button class="btn btn-brown">Забронировать</button>
               </div>
             </form>
           </div>
         </section>
       </main>
+      <footer class="footer">
+        <a href="#">
+          <img
+            src="/icons/Icon-logo.svg"
+            alt="логотип сайта"
+            class="footer__logo"
+          />
+        </a>
+        <nav class="footer__nav">
+          <ul class="footer__list">
+            <li class="footer__list-item">
+              <a class="footer__link" href="#">О нас</a>
+            </li>
+            <li class="footer__list-item">
+              <a class="footer__link" href="#">Скидки</a>
+            </li>
+            <li class="footer__list-item">
+              <a class="footer__link" href="#">Лучшие туры</a>
+            </li>
+            <li class="footer__list-item">
+              <a class="footer__link" href="#">Калькулятор цены</a>
+            </li>
+            <li class="footer__list-item">
+              <a class="footer__link" href="#">Связаться с нами</a>
+            </li>
+          </ul>
+        </nav>
+      </footer>
     </div>
   </body>
 </html>
