--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
   </head>
   <body>
     <div class="container">
+      <div class="navigation">
+        <input
+          type="checkbox"
+          class="navigation__toggle"
+          id="navigation-toggle"
+        />
+        <label for="navigation-toggle" class="navigation__button">МЕНЮ</label>
+        <div class="navigation__background"></div>
+        <nav class="navigation__nav">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">О нас</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Скидки</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Лучшие туры</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Калькулятор цены</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Связаться с нами</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
       <header class="header">
         <img
           class="header__logo"
