--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
           class="navigation__toggle"
           id="navigation-toggle"
         />
-        <label for="navigation-toggle" class="navigation__button">МЕНЮ</label>
+        <label for="navigation-toggle" class="navigation__button"
+          ><span class="navigation__icon"></span
+        ></label>
         <div class="navigation__background"></div>
         <nav class="navigation__nav">
           <ul class="navigation__list">
